syntax="proto3";
package pb;
option go_package = "github.com/vietquan-37/todo-list/pb";
message PaginationRequest{
  
    int64 pageNumber=1;
    int64 pageSize=2;
}
message PaginationResponse{
    int64 totalPage=1;
    int64 pageNumber=2;
    int64 pageSize=3;
}