syntax="proto3";
package pb;
import "pagination.proto";
option go_package = "github.com/vietquan-37/todo-list/pb";

message UserResponse{
   string email=1;
   string phone_number=2;
   string full_name=3;
   string role=4;
}
message UserListResponse{
   repeated UserResponse users =1;
  PaginationResponse page=2;

}
message DeleteUserRequest {
   int64 id = 1;  
}
message CreateUserRequest{
   string email=1;
   string password=2;
   string phone_number=3;
   string full_name=4;
}   
message DeleteUserResponse {
  string message = 1;   
}
message Pagination{
   PaginationRequest request=1;
}
message UserUpdateRequest{
   int32 ID=1;
   optional string password=2;
   optional string phone_number=3;
   optional string full_name=4;
}
service TodoList{
   rpc CreateUser(CreateUserRequest) returns(UserResponse){}
   rpc DeleteUser(DeleteUserRequest)returns(DeleteUserResponse){}
   rpc GetAllUser(Pagination) returns(UserListResponse){}
   rpc UpdateUser(UserUpdateRequest) returns(UserResponse){}
}
